# bg2-voice-generator

./: .gitignore  AGENTS.md  README.md  build-portable.ps1  fetch-tools.ps1  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.js  vitest.config.ts
src/: app.css  (+3 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/bg2-synthesis-cli/: Cargo.toml
src-tauri/bg2-synthesis-cli/src/: main.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_templates.rs  cli.rs  dictionary.rs  dictionary_defaults.rs  error.rs  lib.rs  main.rs  models.rs  omnivoice_tags.rs  paths.rs  profile.rs  profile_transfer.rs  synthesis.rs  synthesis_corpus_audit.rs  synthesis_validation.rs  tag_rule_defaults.rs  tag_rules.rs  tts_spelling.rs
src-tauri/src/agent_templates/: audit-bindings-skill.md  set-synthesis-skill.md
src-tauri/src/audio/: candidates.rs  ffmpeg.rs  mod.rs  reference_text.rs  scoring.rs  vorbis.rs  wav.rs
src-tauri/src/backup/: mod.rs
src-tauri/src/commands/: agent.rs  attribution.rs  binding_audit.rs  dictionary.rs  export.rs  extractor.rs  generate.rs  harvest.rs  metadata_binding.rs  mod.rs  profile.rs  progress.rs  settings.rs  startup.rs  synthesis.rs  tag_rules.rs  transfer.rs  voice_profiles.rs
src-tauri/src/db/: attribution.rs  binding_audit.rs  export.rs  follow_binding.rs  generation.rs  generation_scope.rs  harvest.rs  metadata_binding.rs  mod.rs  queries.rs  schema.rs  speaker_groups.rs  voice_profiles.rs
src-tauri/src/export/: build.rs  docs.rs  manifest.rs  mod.rs  plan.rs  resref.rs  tp2.rs  zip.rs
src-tauri/src/extractor/: attribution.rs  bif.rs  bytes.rs  companion.rs  cre.rs  dlg.rs  ids.rs  key.rs  lang.rs  mod.rs  resource.rs  restype.rs  spoken_text.rs  tlk.rs  token_resolve.rs  tokens.rs  twoda.rs  views.rs
(+120 files in other folders)
